// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar component snaps should render Toolbar with every widgets 1`] = `
<div
  className="tc-resource-picker-toolbar-container theme-tc-resource-picker-toolbar-container"
>
  <NameFilter />
  <withI18nextTranslation(SortOptions) />
  <withI18nextTranslation(StateFilter) />
</div>
`;

exports[`Toolbar component snaps should render Toolbar without name widget 1`] = `
<div
  className="tc-resource-picker-toolbar-container theme-tc-resource-picker-toolbar-container"
>
  <withI18nextTranslation(SortOptions) />
  <withI18nextTranslation(StateFilter) />
</div>
`;

exports[`Toolbar component snaps should render Toolbar without sort widgets 1`] = `
<div
  className="tc-resource-picker-toolbar-container theme-tc-resource-picker-toolbar-container"
>
  <NameFilter />
  <withI18nextTranslation(StateFilter) />
</div>
`;

exports[`Toolbar component snaps should render Toolbar without state widgets 1`] = `
<div
  className="tc-resource-picker-toolbar-container theme-tc-resource-picker-toolbar-container"
>
  <NameFilter />
  <withI18nextTranslation(SortOptions) />
</div>
`;
